--- a/02_Exam_Social_Network/02_Exam_Social_Network/Views/Home/Index.cshtml
+++ b/02_Exam_Social_Network/02_Exam_Social_Network/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@using _02_Exam_Social_Network.Data.Entities
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model Coment
+<div>
+
 </div>
+
